--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # The directory Mix will write compiled artifacts to.
 /_build/
+/.lexical/
 
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
@@ -28,6 +29,9 @@ phoenix_yt_series-*.tar
 # Ignore assets that are produced by build tools.
 /priv/static/assets/
 
+# Ignore uploaded files
+/priv/static/uploads/
+
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
 
@@ -38,4 +42,3 @@ npm-debug.log
 # Database files
 *.db
 *.db-*
-
